# SnapszerSimple

./: .gitignore  BENCHMARK_RESULTS.md  NEURAL_CFR_README.md  OPTIMIZATION_REVIEW.md  OPTIMIZATION_SUMMARY.md  PARITY_TEST_RESULTS.md  README.md  RESTRUCTURE_COMPLETE.md  TEST_COVERAGE.md  benchmark_cfr.py  parity_test.py  profile_jax.py  pyproject.toml  requirements.txt  snapszer_jax.py  test_batch_speed.py  test_gpu_cfr.py  test_gpu_setup.py  test_mt19937.py  test_mt_extract.py  test_mt_state.py  test_parity.py  test_rules_enhanced.py  test_seed_55.py  train_gpu_cfr.py  train_gpu_maxed.py  train_neural.py  train_neural_batched.py  train_pure_gpu.py  train_quick_test.py  train_simple.py  train_with_learning.py
benchmarks/: bench_batch_speed.py  bench_optimization.py  bench_optimization_full.py  bench_profile.py
docs/: RESTRUCTURE_PLAN.md
src/snapszer/: __init__.py  base.py  jax_optimized.py
tests/: test_cfr_basic.py  test_mt19937.py  test_optimized_parity.py  test_parity.py  test_parity_optimized.py
tests/debug/: test_mt_extract.py  test_mt_state.py  test_seed_55.py
training/: __init__.py  cfr_trainer.py  config.py  evaluation.py  experience_buffer.py  info_set.py  neural_cfr_batched.py  neural_cfr_gpu_accelerated.py  neural_cfr_learning.py  neural_cfr_pure_gpu.py  neural_cfr_trainer.py  policy_network.py  train.py
